[package]
name = "soroban-micro-lending"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level = "s"
debug = 0
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
codegen-units = 1
